{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 355,
  "lineage": "0cd923f9-b25f-16c8-ec19-5743a1d62c8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "challenge_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05803413c51f242b7",
            "arn": "arn:aws:ec2:us-east-2:944078016394:instance/i-0114b3d26a850a8fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "some-profile",
            "id": "i-0114b3d26a850a8fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_key_1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07bd01950cdf71566",
            "private_dns": "ip-172-31-30-16.us-east-2.compute.internal",
            "private_ip": "172.31.30.16",
            "public_dns": "ec2-3-136-87-35.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.87.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06583b869b87ff729",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220310122532615700000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4a7d361eb2f8a0b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e48b4808808aad6c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.some_profile",
            "aws_iam_role.some_role",
            "aws_key_pair.test_key",
            "aws_security_group.main",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944078016394:security-group/sg-0a75c89da9d20e28e",
            "description": "Allow ssh inbound traffic",
            "egress": [],
            "id": "sg-0a75c89da9d20e28e",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "944078016394",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e63d70d83954a075"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944078016394:security-group/sg-0e48b4808808aad6c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e48b4808808aad6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "174.70.63.158/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220310122532615700000001",
            "name_prefix": "terraform-",
            "owner_id": "944078016394",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e63d70d83954a075"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}